--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 </head>
 <body>
     
-   <div class="box">
+<div class="box">
         <div class="my__container">
             <div class="box__inner" id="navigation">
                 <div class="item">
-                    <div><a href="index.html"> <h1 class="text">Melnyk & Partners</h1> </a></div>
+                    <div><a href="index.html"> <span class="text" style="font-size: 30px;">Melnyk & Partners</span> </a></div>
                 </div>
 
                 <div class="item">
                     <div class="news">
-                        <div class="text" style="margin-left: auto;"><a href="news.html">News</a></div>
+                        <div style="margin-left: auto;"><a href="news.html"><span class="text">News</span></a></div>
                     </div>
                 </div>
                 
                 <div class="item">
                     <div class="join">
-                        <div class="text"><a href="questioner.html">Join</a></div>
+                        <div class="text"><a href="questioner.html"><span class="text">Join</span></a></div>
                     </div>
                 </div>
 
