--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
                 <div class="item" style="margin-left: auto;">
                     <div class="dropdown">
-                        <div class="text mainmenubtn ">Menu</div>
+                        <div class="text mainmenubtn ">Menu ▼</div>
                         <div class="dropdown-child">
                             <a href="login.html">Log in</a>
                             <a href="register.html">Register</a>
